@@ -234,16 +234,16 @@ ui_main_new (void)
 		 G_CALLBACK (quit_program)
 		}
 #elif defined(GNOME)
-		{"GameNew1Player"},
-		{"GameNew2Player"},
-		{"GameNetworkNew"},
-		{"GameNetworkJoin"},
-		{"GameSettings"},
-		{"GameScores"},
-		{"GamePause"},
-		{"GameResume"},
-		{"GameStop"},
-		{"GameQuit"},
+		{"GameNew1Player", NULL, N_("New 1 player")},
+		{"GameNew2Player", NULL, N_("New 2 players")},
+		{"GameNetworkNew", NULL, N_("New network game")},
+		{"GameNetworkJoin", NULL, N_("Join _network game")},
+		{"GameSettings", GTK_STOCK_PREFERENCES},
+		{"GameScores", GTK_STOCK_INDEX, N_("_High Scores")},
+		{"GamePause", NULL, N_("Pause game")},
+		{"GameResume", NULL, N_("Resume game")},
+		{"GameStop", NULL, N_("Stop game")},
+		{"GameQuit", GTK_STOCK_QUIT},
 		{"HelpContent", GTK_STOCK_HELP, N_("_Contents"),
 		 NULL, NULL,
 		 G_CALLBACK (show_help_content)},
